 * Add docs table template rendering example (Matt Westcott)
 * Add blog about image uploads in Wagtail forms to third party tutorial documentation (a-mere-peasant)
 * Clean up multiple minor documentation issues (David T Thompson, ryanomor, kailwallin)
 * Add AbstractUser import to custom user model documentation (LB (Ben Johnston))
 * Fix: Added line breaks to long filenames on multiple image / document uploader (Kevin Howbrook)
 * Fix: Added https support for Scribd oEmbed provider (Rodrigo)
 * Fix: Changed StreamField group labels color so labels are visible (Catherine Farman)
 * Fix: Prevented images with a very wide aspect ratio from being displayed distorted in the rich text editor (Iman Syed)
 * Fix: Prevent exception when deleting a model with a protected One-to-one relationship (Neal Todd)
 * Fix: Added labels to snippet bulk edit checkboxes for screen reader users (Martey Dodoo)
 * Fix: Middleware responses during page preview are now properly returned to the user (Matt Westcott)
 * Fix: Default text of page links in rich text uses the public page title rather than the admin display title (Andy Chosak)
 * Fix: Specific page permission checks are now enforced when viewing a page revision (Andy Chosak)
 * Fix: `pageurl` and `slugurl` tags no longer fail when `request.site` is `None` (Samir Shah)
 * Fix: Output form media on add/edit image forms with custom models (Matt Westcott)
 * Fix: Output form media on add/edit document forms with custom models (Sergey Fedoseev)
 * Fix: Layout for the clear checkbox in default FileField widget (Mikalai Radchuk)
 * Fix: Remove ASCII conversion from Postgres search backend, to support stemming in non-Latin alphabets (Pavel Denisov)
 * Fix: Prevent tab labels on page edit view from being cut off on very narrow screens (Kevin Howbrook)
 * Fix: Very long words in page listings are now broken where necessary (Kevin Howbrook)