@@ -31,7 +31,7 @@ install_requires = [
     "beautifulsoup4>=4.5.1,<4.6.1",
     "html5lib>=0.999,<2",
     "Unidecode>=0.04.14,<2.0",
-    "Willow>=1.1,<1.2",
+    "Willow>=1.3,<1.4",
     "requests>=2.11.1,<3.0",
     "pytz>=2016.6",  # for l18n
     "six>=1.11,<2.0",  # for l18n
